<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>me.hsgamer.bettergui</groupId>
    <artifactId>addon-parent</artifactId>
    <version>1.0</version>
  </parent>

  <artifactId>PaperSpec</artifactId>
  <version>1.2-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>PaperSpec</name>
  <description>Things only work on Paper for BetterGUI</description>

  <properties>
    <java.version>17</java.version>
    <plugin.version>7.1</plugin.version>
    <project.mainClass>me.hsgamer.bettergui.paperspec.PaperSpec</project.mainClass>
  </properties>

  <repositories>
    <repository>
      <id>codemc-public</id>
      <url>https://repo.codemc.io/repository/maven-public/</url>
    </repository>
    <repository>
      <id>papermc</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>1.19.3-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
</project>
